[gd_scene load_steps=4 format=3 uid="uid://clr3jypcafe7s"]

[ext_resource type="Script" path="res://tests/test_kickback.gd" id="1_6eyje"]
[ext_resource type="PackedScene" uid="uid://du2feeoelork" path="res://src/objects/kickback/kickback.tscn" id="1_iygtm"]
[ext_resource type="PackedScene" uid="uid://bum4x2wh8uta0" path="res://src/objects/ball/ball.tscn" id="2_vx677"]

[node name="Test Kickback" type="Node2D"]
script = ExtResource("1_6eyje")

[node name="KickBack" parent="." instance=ExtResource("1_iygtm")]
unique_name_in_owner = true
position = Vector2(270, 1020)
strength = 280000.0
auto_eject = false
always_active = true

[node name="Ball" parent="." instance=ExtResource("2_vx677")]
unique_name_in_owner = true
position = Vector2(270, 870)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 360.0
offset_top = 940.0
offset_right = 660.0
offset_bottom = 1077.0

[node name="EjectButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eject"

[node name="State" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.001

[connection signal="button_down" from="VBoxContainer/EjectButton" to="." method="_on_eject_button_button_down"]
[connection signal="button_up" from="VBoxContainer/EjectButton" to="." method="_on_eject_button_button_up"]
